<resources>
    <string name="app_name">GRE Flashcard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="part_one">Basic Practice 1</string>
    <string name="part_two">Basic Practice 2</string>
    <string name="part_three">Basic Practice 3</string>
    <string name="part_four">Basic Practice 4</string>
    <string name="part_five">Advance Practice 1</string>
    <string name="part_six">Advance Practice 2</string>

    <string name="type_prompt">Type</string>
    <string name="finish">Finish</string>
    <string name="card_saved">Card Saved</string>
    <string name="add_card_success_message">Card has been added to \'My Card\'. Create another card ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_title">Failed!</string>
    <string name="add_card_failed_message">Word and Meaning must not be empty!</string>
    <string name="oke">Oke</string>
    <string name="my_card">My Card</string>
    <string-array name="type_arrays">
        <item>(noun)</item>
        <item>(adj.)</item>
        <item>(verb)</item>
    </string-array>
</resources>
